--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,14 @@
             <name>Apache-2.0</name>
             <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <id>deep-learning-dynamo</id>
-            <email>deeplearningdynamo@gmail.com</email>
-            <url>https://github.com/deep-learning-dynamo</url>
-        </developer>
-        <developer>
-            <id>kuraleta</id>
-            <email>digital.kuraleta@gmail.com</email>
-            <url>https://github.com/kuraleta</url>
+            <id>oldmanpushcart</id>
+            <email>oldmanpushcart@gmail.com</email>
+            <url>https://github.com/oldmanpushcart</url>
         </developer>
     </developers>
 
