--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
         </license>
     </licenses>
 
+    <scm>
+        <url>https://github.com/oldmanpushcart/erniebot4j</url>
+        <connection>scm:git:git://github.com/oldmanpushcart/erniebot4j.git</connection>
+        <developerConnection>scm:git:git@github.com:oldmanpushcart/erniebot4j.git</developerConnection>
+    </scm>
+
     <developers>
         <developer>
             <id>oldmanpushcart</id>
@@ -23,6 +29,13 @@
             <url>https://github.com/oldmanpushcart</url>
         </developer>
     </developers>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/oldmanpushcart/erniebot4j</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -32,6 +45,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.9.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <encoding>UTF-8</encoding>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
